@@ -3,8 +3,11 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <global name="ERP5Form" module="Products.ERP5Form.Form"/>
-        <tuple/>
+        <tuple>
+          <string>Products.ERP5Form.Form</string>
+          <string>ERP5Form</string>
+        </tuple>
+        <none/>
       </tuple>
     </pickle>
     <pickle>
@@ -110,7 +113,6 @@
                     <value>
                       <list>
                         <string>my_title</string>
-                        <string>my_reference</string>
                         <string>my_resource</string>
                         <string>my_destination_section_title</string>
                         <string>my_destination_decision_title</string>
